# ode-multiomics-benchmark

./: CLAUDE_CODE_PROMPT.md  COLAB_SETUP.md  EXPERIMENT_DESIGN.md  README.md  README_papers.md  TECHNICAL_SPEC.md  config_baseline.yaml  config_misspecified_ode.yaml  config_sparse_data.yaml  environment.yml  pyproject.toml  requirements.txt
experiments/: config_baseline.yaml  config_baseline_colab.yaml  config_baseline_colab_100x3.yaml  config_baseline_colab_100x5.yaml  config_baseline_colab_200x3.yaml  config_baseline_colab_200x5.yaml  config_fast.yaml  config_misspec.yaml  config_noise.yaml  config_sampling.yaml  config_sparse.yaml  config_test_small.yaml
notebooks/: 00-quickstart.ipynb  01-motif-deep-dive.ipynb  02-ude-deep-dive.ipynb  03-results-analysis.ipynb  04-methodology.ipynb  run_baseline_colab.ipynb
scripts/: package_for_colab.ps1
src/: __init__.py  evaluation.py  experiment_utils.py  motif_pipeline.py  plotting.py  reynolds_ode.py  run_experiment.py  synthetic_data.py  ude_pipeline.py
src/results/: synthetic_cohort_baseline_summary.csv
tests/: __init__.py  test_evaluation.py  test_motif_pipeline.py  test_reynolds_ode.py  test_run_experiment.py  test_synthetic_data.py  test_ude_pipeline.py
